--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,16 +1,15 @@
 @charset "utf-8";
 
-@use 'sass/home';
+@use "sass/home";
 
 @font-face {
-    font-family: "Oradano";
-    src: local("Oradano");
-    url:("./font/OradanoGSRR.ttf") format("truetype")
-  }
+  font-family: "Oradano";
+  src: local("Oradano");
+  url: ("./font/OradanoGSRR.ttf") format("truetype");
+}
 
-  @font-face {
-    font-family: "Fondamento";
-    src: local("Fondamento-Regular");
-    url:("./font/Fondamento-Regular.ttf") format("truetype")
-  }
-
+@font-face {
+  font-family: "Fondamento";
+  src: local("Fondamento-Regular");
+  url: ("./font/Fondamento-Regular.ttf") format("truetype");
+}
