footer jsx added. footer and header scss added

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,6 +8,8 @@
 @use "sass/kanji";
 @use "sass/hiragana";
 @use "sass/katakana";
+@use "sass/header";
+@use "sass/footer";
 
 @font-face {
   font-family: "Oradano";
