--- a/frontend/src/sass/_home.scss
+++ b/frontend/src/sass/_home.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   text-align: center;
+  height: auto;
+  margin: 0
 }
 
 .font {
@@ -22,4 +24,6 @@
   border: 1rem solid;
   border-color: rgb(134, 22, 52);
   border-radius: 12px;
+  margin: auto;
+  height:70vh
 }
