--- a/frontend/src/sass/_footer.scss
+++ b/frontend/src/sass/_footer.scss
@@ -1,4 +1,6 @@
 .footer{
+    position: relative;
+    bottom: 0;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
