contact page scss

--- a/frontend/src/sass/_home.scss
+++ b/frontend/src/sass/_home.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   text-align: center;
   height: auto;
-  margin: 0
+  margin: 0;
 }
 
 .font {
@@ -21,9 +21,7 @@
 }
 
 .home-img {
-  border: 1rem solid;
-  border-color: rgb(134, 22, 52);
   border-radius: 12px;
   margin: auto;
-  height:70vh
+  height: 70vh;
 }
