kanji routes rectified

--- a/frontend/src/sass/_contact.scss
+++ b/frontend/src/sass/_contact.scss
@@ -7,7 +7,8 @@
   .emailbox {
     margin-bottom: 3rem;
     border: 0.2rem solid rgb(134, 22, 52);
-    font-size: large;
+    font-size: larger;
+    font-family: 'Times New Roman', Times, serif;
     padding-left: 1rem;
     border-radius: 6px;
     height: 1.5rem;
@@ -16,7 +17,8 @@
   }
   .objectbox {
     border: 0.2rem solid rgb(134, 22, 52);
-    font-size: large;
+    font-size: larger;
+    font-family: 'Times New Roman', Times, serif;
     padding-left: 1rem;
     border-radius: 6px;
     height: 1.5rem;
@@ -27,6 +29,7 @@
     margin-top: 3rem;
     border: 0.2rem solid rgb(134, 22, 52);
     font-size: larger;
+    font-family: 'Times New Roman', Times, serif;
     padding-left: 1rem;
     border-radius: 6px;
     width: 27rem;
