--- a/frontend/src/sass/_footer.scss
+++ b/frontend/src/sass/_footer.scss
@@ -15,8 +15,7 @@
   text-decoration: none;
   margin-left: 2rem;
   color: black;
-  font-size: larger;
-  font-family: Fondamento;
+  font-size: 22px;
 }
 
 .contact-link {
@@ -28,4 +27,5 @@
   margin-right: 2rem;
   padding-left: 3rem;
   color: rgb(134, 22, 52);
+  font-size: 22px;
 }
