--- a/frontend/src/sass/_about.scss
+++ b/frontend/src/sass/_about.scss
@@ -5,6 +5,7 @@
     text-align: center;
     font-size: larger;
     flex-direction: column;
+    margin-right: 12rem;
     height: 70vh;
 }
 .about-text{
