--- a/frontend/src/sass/_hiragana.scss
+++ b/frontend/src/sass/_hiragana.scss
@@ -5,10 +5,13 @@ h1{
     margin-top: 3rem;
 }
 
-.kana-table {
+.hira-table {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 12rem;
+    margin-top: 6rem;
 }
 
+td{
+    font-size: 26px;
+}
